# adam

./: .gitignore  CITATION.cff  README.md  ci_env.yml  ci_env_linux.yml  ci_env_win.yml  pyproject.toml
docs/: index.rst  installation.rst
docs/guides/: backend_selection.rst  concepts.rst  floating_base.rst  index.rst  mujoco.rst  troubleshooting.rst  visualization.rst
docs/modules/: index.rst  jax.rst  pytorch.rst  visualization.rst
docs/quickstart/: casadi.rst  index.rst  jax.rst  numpy.rst  pytorch.rst
examples/: _example_utils.py  neural_ik.py  visualize_icub.py  visualize_mujoco.py  visualize_multi_robot.py  visualize_usd.py
examples/visualization/: _example_utils.py  visualize_mujoco.py  visualize_multi_robot.py  visualize_urdf.py  visualize_usd.py
src/adam/casadi/: casadi_like.py  computations.py  inverse_kinematics.py
src/adam/core/: rbd_algorithms.py  spatial_math.py
src/adam/jax/: computations.py
src/adam/model/: __init__.py  abc_factories.py  factory.py  kindyn_mixin.py  model.py  tree.py  visuals.py
src/adam/model/conversions/: __init__.py  idyntree.py  usd.py
src/adam/numpy/: computations.py
src/adam/pytorch/: __init__.py  computations.py
src/adam/visualization/: __init__.py  cli.py  viser.py
tests/: conftest.py  test_casadi.py  test_idyntree_conversion.py  test_inverse_kinematics.py  test_jax.py  test_jax_batch.py  test_joint_motion_subspace.py  test_mujoco.py  test_mujoco_sites.py  test_numpy.py  test_pytorch.py  test_pytorch_batch.py  test_usd.py  test_usd_conversion.py  test_usd_frames.py  test_visualization.py
tests/parametric/: test_casadi_parametric.py  test_idyntree_conversion_parametric.py  test_jax_parametric.py  test_numpy_parametric.py  test_parametric_joint_motion_subspace.py  test_pytorch_parametric.py
(+13 files in other folders)
