[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adam-robotics"
dynamic = ["version"]
description = "Automatic Differentiation for rigid-body-dynamics AlgorithMs"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Giuseppe L'Erario", email = "gl.giuseppelerario@gmail.com" },
]
requires-python = ">=3.10"
keywords = [
  "robotics",
  "urdf",
  "rigid body dynamics",
  "featherstone",
  "automatic differentiation",
  "optimization",
  "casadi",
  "jax",
  "pytorch",
  "reinforcement-learning",
  "motion-planning",
]

dependencies = [
  "numpy>=1.20",
  "scipy",
  "prettytable",
  "urdfdom-py",
  "array-api-compat",
]

[project.optional-dependencies]
jax = ["jax<=0.6.0", "jaxlib"]
casadi = ["casadi>=3.6", "liecasadi"]
pytorch = ["torch"]
mujoco = ["mujoco"]
usd = ["usd-core"]
conversion = ["idyntree"]
all = [
  "adam-robotics[jax,casadi,pytorch,mujoco,usd,conversion]",
]
test = [
  "adam-robotics[jax,casadi,pytorch,mujoco,conversion]"
  "pytest",
  "requests",
  "robot_descriptions",
  "urdf-usd-converter",
  "icub-models",
]
dev = [
  "adam-robotics[test]",
  "black",
]

[project.urls]
Documentation = "https://adam-robotics.readthedocs.io/en/latest/"
Source = "https://github.com/ami-iit/adam"

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
src = ["src"]

[tool.pytest.ini_options]
addopts = "--capture=no --verbose"
testpaths = ["tests"]
